[BUG] #23370 - Fix button overlap in full time IC form

--- a/clients/hubdrive/view/apps/HubDrive/index.scss
+++ b/clients/hubdrive/view/apps/HubDrive/index.scss
@@ -1,16 +1,19 @@
- .osjs-window[data-id=HubDrive_Window] {
+.osjs-window[data-id="HubDrive_Window"] {
+  // Changing the Icon cursor from Pointer to Auto
+  .osjs-window-icon > div {
+    cursor: auto !important;
+  }
+}
 
-   // Changing the Icon cursor from Pointer to Auto
-   .osjs-window-icon>div {
-     cursor: auto !important;
-   }
- }
+.osjs-system-context-menu {
+  display: none;
+}
 
- .osjs-system-context-menu {
-   display: none;
- }
- 
 // ---SweetAlert2 Fixes (Start)---
+
+.wizard-page {
+  margin-bottom: 1rem;
+}
 
 body.swal2-shown:not(.swal2-no-backdrop):not(.swal2-toast-shown) {
   height: 100% !important;
@@ -170,6 +173,10 @@ body.swal2-shown:not(.swal2-no-backdrop):not(.swal2-toast-shown) {
         }
       }
     }
+  }
+
+  .wizard-page {
+    margin-bottom: 1rem;
   }
 
   .policyStatusReview {
